<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/song_title"/>

    <EditText
        android:id="@+id/etSongTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/songTitle"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/singers"/>

    <EditText
        android:id="@+id/etSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/SingerName"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/year"/>

    <EditText
        android:id="@+id/etYear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_year_of_release_here"
        android:minHeight="48dp" />

    <TextView
        android:id="@+id/tvStars"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stars"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginStart="10dp">

        <RadioGroup
            android:id="@+id/rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rbtn1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb1" />

            <RadioButton
                android:id="@+id/rbtn2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb2" />

            <RadioButton
                android:id="@+id/rbtn3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb3" />

            <RadioButton
                android:id="@+id/rbtn4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb4" />

            <RadioButton
                android:id="@+id/rbtn5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rb5" />
        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnInsert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/insert"/>

        <Button
            android:id="@+id/btnShowList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/show_list"/>

    </LinearLayout>
</LinearLayout>