<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:text="@string/song_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/pink" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvSongYear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year" />

        <TextView
            android:id="@+id/tvSongStar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stars"
            android:textColor="@color/HotPink"/>
    </LinearLayout>

    <TextView
        android:id="@+id/tvSongSinger"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/DeepPink"
        android:text="@string/singers" />

</LinearLayout>